// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test PriceForm component should render the component to match snapshot 1`] = `
<PriceForm
  item={Object {}}
  onCancelSubmit={[MockFunction]}
  onFormSubmit={[MockFunction]}
>
  <form
    noValidate={true}
    onSubmit={[Function]}
  >
    <div
      className="form-group"
    >
      <label
        htmlFor="title"
      >
        标题 *
      </label>
      <input
        className="form-control"
        id="title"
        placeholder="请输入标题"
        type="text"
      />
    </div>
    <div
      className="form-group"
    >
      <label
        htmlFor="price"
      >
        价格 *
      </label>
      <div
        className="input-group"
      >
        <div
          className="input-group-prepend"
        >
          <span
            className="input-group-text"
          >
            ¥
          </span>
        </div>
        <input
          className="form-control"
          id="price"
          placeholder="请输入价格"
          type="number"
        />
      </div>
    </div>
    <div
      className="form-group"
    >
      <label
        htmlFor="date"
      >
        日期 *
      </label>
      <input
        className="form-control"
        id="date"
        placeholder="请输入日期"
        type="date"
      />
    </div>
    <button
      className="btn btn-primary mr-3"
      type="submit"
    >
      提交
    </button>
    <button
      className="btn btn-secondary"
      onClick={[MockFunction]}
    >
       取消
    </button>
  </form>
</PriceForm>
`;

exports[`test PriceForm component should render the component to match snapshot 2`] = `
<PriceForm
  item={
    Object {
      "cid": "1",
      "date": "2018-08-15",
      "id": "_kly1klf4g",
      "monthCategory": "2018-8",
      "price": 100,
      "timestamp": 1534291200000,
      "title": "buy stuff for kitten",
    }
  }
  onCancelSubmit={[MockFunction]}
  onFormSubmit={[MockFunction]}
>
  <form
    noValidate={true}
    onSubmit={[Function]}
  >
    <div
      className="form-group"
    >
      <label
        htmlFor="title"
      >
        标题 *
      </label>
      <input
        className="form-control"
        defaultValue="buy stuff for kitten"
        id="title"
        placeholder="请输入标题"
        type="text"
      />
    </div>
    <div
      className="form-group"
    >
      <label
        htmlFor="price"
      >
        价格 *
      </label>
      <div
        className="input-group"
      >
        <div
          className="input-group-prepend"
        >
          <span
            className="input-group-text"
          >
            ¥
          </span>
        </div>
        <input
          className="form-control"
          defaultValue={100}
          id="price"
          placeholder="请输入价格"
          type="number"
        />
      </div>
    </div>
    <div
      className="form-group"
    >
      <label
        htmlFor="date"
      >
        日期 *
      </label>
      <input
        className="form-control"
        defaultValue="2018-08-15"
        id="date"
        placeholder="请输入日期"
        type="date"
      />
    </div>
    <button
      className="btn btn-primary mr-3"
      type="submit"
    >
      提交
    </button>
    <button
      className="btn btn-secondary"
      onClick={[MockFunction]}
    >
       取消
    </button>
  </form>
</PriceForm>
`;
